--- a/src/composer.json
+++ b/src/composer.json
@@ -46,6 +46,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "larastan": [
+            "./vendor/bin/phpstan analyze --memory-limit=1G"
+        ],
+        "test:all": [
+            "./vendor/bin/phpunit"
         ]
     },
     "extra": {
