--- a/src/composer.json
+++ b/src/composer.json
@@ -52,6 +52,12 @@
         ],
         "test:all": [
             "./vendor/bin/phpunit"
+        ],
+        "test:unit": [
+            "./vendor/bin/phpunit tests/unit"
+        ],
+        "test:feature": [
+            "./vendor/bin/phpunit tests/feature"
         ]
     },
     "extra": {
