--- a/src/composer.json
+++ b/src/composer.json
@@ -54,10 +54,10 @@
             "./vendor/bin/phpunit"
         ],
         "test:unit": [
-            "./vendor/bin/phpunit tests/unit"
+            "./vendor/bin/phpunit tests/Unit/"
         ],
         "test:feature": [
-            "./vendor/bin/phpunit tests/feature"
+            "./vendor/bin/phpunit tests/Feature/"
         ]
     },
     "extra": {
